--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       
       <!-- Load 3D Model -->
       <a-assets>
-        <a-asset-item id="heartModel" src="https://cdn.glitch.global/d4cda1a5-445d-4bfa-84a6-f49e6f85925d/heart.glb?v=1718485828432"></a-asset-item>
+        <a-asset-item id="heartModel" src="https://models.babylonjs.com/heart.glb"></a-asset-item>
       </a-assets>
 
       <!-- Marker -->
