--- a/index.html
+++ b/index.html
@@ -1,22 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Father's Day AR Tribute</title>
+    <title>Father's Day AR Heart Tribute</title>
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js/aframe/build/aframe-ar.min.js"></script>
   </head>
   <body style="margin: 0; overflow: hidden;">
     <a-scene embedded arjs="sourceType: webcam;">
       
-      <!-- Load 3D Model -->
-      <a-assets>
-        <a-asset-item id="heartModel" src="https://models.babylonjs.com/heart.glb"></a-asset-item>
-      </a-assets>
-
       <!-- Marker -->
       <a-marker preset="hiro">
 
-        <!-- Main Title -->
+        <!-- Message -->
         <a-text 
           value="To the man who does it all…" 
           position="0 1.4 0" 
@@ -24,23 +19,44 @@
           color="#FFD700" 
           align="center" 
           width="4"
-          animation__fade="property: opacity; from: 0; to: 1; dur: 1500; delay: 500"
-        ></a-text>
+          animation="property: opacity; from: 0; to: 1; dur: 1500; delay: 500">
+        </a-text>
 
-        <!-- 3D Heart -->
-        <a-entity 
-          gltf-model="#heartModel" 
-          position="0 0.6 0" 
-          scale="1 1 1"
-          animation="property: rotation; to: 0 360 0; loop: true; dur: 6000">
+        <!-- Procedural Heart -->
+        <a-entity position="0 0.6 0" animation="property: rotation; to: 0 360 0; loop: true; dur: 6000">
+
+          <!-- Left lobe -->
+          <a-sphere 
+            position="-0.15 0 0" 
+            radius="0.15" 
+            color="red">
+          </a-sphere>
+
+          <!-- Right lobe -->
+          <a-sphere 
+            position="0.15 0 0" 
+            radius="0.15" 
+            color="red">
+          </a-sphere>
+
+          <!-- Point -->
+          <a-cone 
+            position="0 -0.12 0" 
+            rotation="180 0 0" 
+            height="0.3" 
+            radius-bottom="0.15" 
+            radius-top="0.01" 
+            color="red">
+          </a-cone>
+
         </a-entity>
 
-        <!-- Orbiting Tribute Words -->
-        <a-entity id="orbit-group" position="0 0.6 0">
+        <!-- Orbiting Words -->
+        <a-entity position="0 0.6 0">
           <a-entity rotation="0 0 0" animation="property: rotation; to: 0 360 0; loop: true; dur: 12000">
             <a-text value="Protector" position="0 0 -1.2" rotation="-90 0 0" color="#87CEEB" width="2"></a-text>
             <a-text value="Grill Master" position="0.85 0 -0.85" rotation="-90 -45 0" color="#FFA07A" width="2"></a-text>
-            <a-text value="Taxi Driver" position="1.2 0 0" rotation="-90 -90 0" color="#32CD32" width="2"></a-text>
+            <a-text value="Lovable" position="1.2 0 0" rotation="-90 -90 0" color="#32CD32" width="2"></a-text>
             <a-text value="Fixer" position="0.85 0 0.85" rotation="-90 -135 0" color="#FF6347" width="2"></a-text>
             <a-text value="Teacher" position="0 0 1.2" rotation="-90 -180 0" color="#BA55D3" width="2"></a-text>
             <a-text value="Best Friend" position="-0.85 0 0.85" rotation="-90 -225 0" color="#1E90FF" width="2"></a-text>
@@ -49,7 +65,7 @@
           </a-entity>
         </a-entity>
 
-        <!-- Background Music -->
+        <!-- Music -->
         <a-sound 
           src="https://cdn.pixabay.com/download/audio/2022/02/23/audio_cfaebfa4ee.mp3" 
           autoplay="true" 
