--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
   <body>
     <a-scene embedded arjs="sourceType: webcam;">
       
-      <!-- Audio -->
+      <!-- Load Local Audio -->
       <a-assets>
-        <audio id="voiceClip" src="your-audio-url.mp3"></audio>
+        <audio id="voiceClip" src="message.mp3"></audio>
       </a-assets>
 
       <!-- Marker -->
@@ -75,7 +75,7 @@
 
     </a-scene>
 
-    <!-- Real HTML Button -->
+    <!-- HTML Audio Button -->
     <button id="playBtn">▶ Play Message</button>
 
     <script>
